refactoring code to fit API standards + doc
